--- a/src/main/resources/template/entity.java.vm
+++ b/src/main/resources/template/entity.java.vm
@@ -21,7 +21,7 @@ import java.math.BigDecimal;
 @ApiModel
 @Data
 @Table(name = "${tableName}")
-public class ${className} implements Serializable {
+public class ${className} extends PageDto implements Serializable {
 	private static final long serialVersionUID = 1L;
 	
 #foreach ($column in $columns)
